CXI11072132 Clock Issues on Mobile

--- a/public/components/shared/ClockTwo/styles.moudle.scss
+++ b/public/components/shared/ClockTwo/styles.moudle.scss
@@ -66,8 +66,8 @@
             -webkit-text-fill-color: transparent;
           }
           .dot {
-            width: 95%;
-            height: 95%;
+            width: 90%;
+            height: 90%;
             // background-color: rgb(125, 140, 234);
             border-radius: 50%;
             position: absolute;
